--- a/views/layout/layoutMenu.html
+++ b/views/layout/layoutMenu.html
@@ -1,47 +1,21 @@
-<div id="Menu" class="sidenav">
+<nav id="Menu" class="sidenav">
   <div id="Menu_ba">
     <svg class="n_581">
       <rect id="n_581" rx="0" ry="0" x="0" y="0" width="412" height="733"></rect>
     </svg>
-    <div id="profile">
-      <svg class="n_582">
-        <rect id="n_582" rx="0" ry="0" x="0" y="0" width="412" height="88"></rect>
-      </svg>
-      <div id="Name">
-        <div id="Text">
-          <span>박장군</span>
-        </div>
-        <div id="n__">
-          <span>부산 해운대구</span>
-        </div>
-      </div>
-      <div id="profile_photo">
-        <svg class="n_96">
-          <ellipse id="n_96" rx="26" ry="26" cx="26" cy="26"></ellipse>
-        </svg>
-        <div id="n__4" class="______4">
-          <svg class="n_1_bc" viewBox="0 0 18 18">
-            <path id="n_1_bc" d="M 0 18 L 0 15.750244140625 C 0 13.27471923828125 4.049949645996094 11.24972534179688 9 11.24972534179688 C 13.95005130767822 11.24972534179688 18 13.27471923828125 18 15.750244140625 L 18 18 L 0 18 Z M 4.499494075775146 4.500518798828125 C 4.499494075775146 2.014862060546875 6.514344215393066 0 9 0 C 11.48464393615723 0 13.4994945526123 2.014862060546875 13.4994945526123 4.500518798828125 C 13.4994945526123 6.985137939453125 11.48464393615723 9 9 9 C 6.514344215393066 9 4.499494075775146 6.985137939453125 4.499494075775146 4.500518798828125 Z">
-            </path>
-          </svg>
-        </div>
-      </div>
-      <div id="Logout" class="Logout">
-        <svg class="n_570">
-          <rect id="n_570" rx="0" ry="0" x="0" y="0" width="18" height="18"></rect>
-        </svg>
-        <svg class="n_151" viewBox="0 0 15.356 17.579">
-          <path id="n_151" d="M 1.818482637405396 1.818482637405396 L 1.818482637405396 15.7601842880249 L 10.50679016113281 15.7601842880249 L 10.50679016113281 17.57866668701172 L 0 17.57866668701172 L 0 0 L 10.5067892074585 0 L 10.5067892074585 1.818482637405396 L 1.818482637405396 1.818482637405396 Z M 9.900629043579102 14.54786109924316 L 8.486252784729004 13.1334867477417 L 11.7191104888916 9.900629043579102 L 4.243126392364502 9.900629043579102 L 4.243126392364502 7.880092144012451 L 11.92116355895996 7.880092144012451 L 8.486252784729004 4.647233963012695 L 9.900628089904785 3.232857942581177 L 15.35607624053955 8.68830680847168 L 9.900629043579102 14.54786109924316 Z">
-          </path>
-        </svg>
-      </div>
-    </div>
   </div>
   <div id="n__bg">
+    <div id="n_Btn_bw" class="__Btn">
+      <svg class="n_1090_bx">
+        <rect id="n_1090_bx" rx="4" ry="4" x="0" y="0" width="148" height="48"></rect>
+      </svg>
+      <div id="HOME">
+        <span>HOME</span>
+      </div>
+    </div>
     <div id="n_Btn" class="_____Btn">
       <svg class="n_1090">
-        <rect id="n_1090" rx="4" ry="4" x="0" y="0" width="148" height="48">
-        </rect>
+        <rect id="n_1090" rx="4" ry="4" x="0" y="0" width="148" height="48"></rect>
       </svg>
       <div id="Text_bj">
         <span>사용설명</span>
@@ -83,15 +57,6 @@
         <span>결재하기</span>
       </div>
     </div>
-    <div id="n_Btn_bw" class="__Btn">
-      <svg class="n_1090_bx">
-        <rect id="n_1090_bx" rx="4" ry="4" x="0" y="0" width="148" height="48">
-        </rect>
-      </svg>
-      <div id="HOME">
-        <span>HOME</span>
-      </div>
-    </div>
   </div>
   <div id="n__bz">
     <svg class="Icon_awesome-photo-video" viewBox="0 0 29.25 24.367">
@@ -131,7 +96,40 @@
       </path>
     </svg>
   </div>
-</div>
+  <div id="profile">
+    <svg class="n_582">
+      <rect id="n_582" rx="0" ry="0" x="0" y="0" width="412" height="88"></rect>
+    </svg>
+    <div id="Name">
+      <div id="Text">
+        <span>박장군</span>
+      </div>
+      <div id="n__">
+        <span>부산 해운대구</span>
+      </div>
+    </div>
+    <div id="profile_photo">
+      <svg class="n_96">
+        <ellipse id="n_96" rx="26" ry="26" cx="26" cy="26"></ellipse>
+      </svg>
+      <div id="n__4" class="______4">
+        <svg class="n_1_bc" viewBox="0 0 18 18">
+          <path id="n_1_bc" d="M 0 18 L 0 15.750244140625 C 0 13.27471923828125 4.049949645996094 11.24972534179688 9 11.24972534179688 C 13.95005130767822 11.24972534179688 18 13.27471923828125 18 15.750244140625 L 18 18 L 0 18 Z M 4.499494075775146 4.500518798828125 C 4.499494075775146 2.014862060546875 6.514344215393066 0 9 0 C 11.48464393615723 0 13.4994945526123 2.014862060546875 13.4994945526123 4.500518798828125 C 13.4994945526123 6.985137939453125 11.48464393615723 9 9 9 C 6.514344215393066 9 4.499494075775146 6.985137939453125 4.499494075775146 4.500518798828125 Z">
+          </path>
+        </svg>
+      </div>
+    </div>
+    <div id="Logout" class="Logout">
+      <svg class="n_570">
+        <rect id="n_570" rx="0" ry="0" x="0" y="0" width="18" height="18"></rect>
+      </svg>
+      <svg class="n_151" viewBox="0 0 15.356 17.579">
+        <path id="n_151" d="M 1.818482637405396 1.818482637405396 L 1.818482637405396 15.7601842880249 L 10.50679016113281 15.7601842880249 L 10.50679016113281 17.57866668701172 L 0 17.57866668701172 L 0 0 L 10.5067892074585 0 L 10.5067892074585 1.818482637405396 L 1.818482637405396 1.818482637405396 Z M 9.900629043579102 14.54786109924316 L 8.486252784729004 13.1334867477417 L 11.7191104888916 9.900629043579102 L 4.243126392364502 9.900629043579102 L 4.243126392364502 7.880092144012451 L 11.92116355895996 7.880092144012451 L 8.486252784729004 4.647233963012695 L 9.900628089904785 3.232857942581177 L 15.35607624053955 8.68830680847168 L 9.900629043579102 14.54786109924316 Z">
+        </path>
+      </svg>
+    </div>
+  </div>
+</nav>
 <script>
   function openNav() {
     document.getElementById("Menu").style.width = "412px";
