--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -664,231 +664,25 @@ a { color: #00B7FF;}
   top: 0px;
   transform: matrix(1,0,0,1,0,0);
 }
-#n__bg {
+.menu-group-text {
   position: absolute;
   width: 148px;
-  height: 343px;
   left: 160px;
   top: 115px;
   overflow: visible;
 }
-#n_Btn {
-  position: absolute;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 59px;
-  overflow: visible;
-  --web-animation: fadein 0.3s ease-out;
-  --web-action-type: page;
-  --web-action-target: Welcome.html;
-  cursor: pointer;
-}
-#n_1090 {
-  fill: rgba(38,153,251,1);
-}
-.n_1090 {
-  position: absolute;
-  overflow: visible;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 0px;
-}
-#Text_bj {
-  left: 38px;
-  top: 12px;
-  position: absolute;
-  overflow: visible;
-  width: 73px;
+.menu-text {
+  position: relative;
+  background-color: rgba(38,153,251,1);
+  vertical-align: middle;
   white-space: nowrap;
-  line-height: 30px;
-  margin-top: -6px;
-  text-align: center;
+  /* line-height: 30px; */
+  border: none;
   font-family: Arial;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   color: rgba(255,255,255,1);
-}
-#n_Btn_bk {
-  position: absolute;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 118px;
-  overflow: visible;
-  --web-animation: fadein 0.3s ease-out;
-  --web-action-type: page;
-  --web-action-target: Photo_work_.html;
-  cursor: pointer;
-}
-#n_1090_bl {
-  fill: rgba(38,153,251,1);
-}
-.n_1090_bl {
-  position: absolute;
-  overflow: visible;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 0px;
-}
-#Text_bm {
-  left: 38px;
-  top: 12px;
-  position: absolute;
-  overflow: visible;
-  width: 73px;
-  white-space: nowrap;
-  line-height: 30px;
-  margin-top: -6px;
-  text-align: center;
-  font-family: Arial;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  color: rgba(255,255,255,1);
-}
-#n_Btn_bn {
-  position: absolute;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 177px;
-  overflow: visible;
-  --web-animation: fadein 0.3s ease-out;
-  --web-action-type: page;
-  --web-action-target: Personal_.html;
-  cursor: pointer;
-}
-#n_1090_bo {
-  fill: rgba(38,153,251,1);
-}
-.n_1090_bo {
-  position: absolute;
-  overflow: visible;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 0px;
-}
-#Text_bp {
-  left: 47px;
-  top: 12px;
-  position: absolute;
-  overflow: visible;
-  width: 55px;
-  white-space: nowrap;
-  line-height: 30px;
-  margin-top: -6px;
-  text-align: center;
-  font-family: Arial;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  color: rgba(255,255,255,1);
-}
-#n_Btn_bq {
-  position: absolute;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 236px;
-  overflow: visible;
-  --web-animation: fadein 0.3s ease-out;
-  --web-action-type: page;
-  --web-action-target: Photo_work_confirm.html;
-  cursor: pointer;
-}
-#n_1090_br {
-  fill: rgba(38,153,251,1);
-}
-.n_1090_br {
-  position: absolute;
-  overflow: visible;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 0px;
-}
-#Text_bs {
-  left: 29px;
-  top: 12px;
-  position: absolute;
-  overflow: visible;
-  width: 91px;
-  white-space: nowrap;
-  line-height: 30px;
-  margin-top: -6px;
-  text-align: center;
-  font-family: Arial;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  color: rgba(255,255,255,1);
-}
-#n_Btn_bt {
-  position: absolute;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 295px;
-  overflow: visible;
-  --web-animation: fadein 0.3s ease-out;
-  --web-action-type: page;
-  --web-action-target: Payment.html;
-  cursor: pointer;
-}
-#n_1090_bu {
-  fill: rgba(38,153,251,1);
-}
-.n_1090_bu {
-  position: absolute;
-  overflow: visible;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 0px;
-}
-#Text_bv {
-  left: 38px;
-  top: 12px;
-  position: absolute;
-  overflow: visible;
-  width: 73px;
-  white-space: nowrap;
-  line-height: 30px;
-  margin-top: -6px;
-  text-align: center;
-  font-family: Arial;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  color: rgba(255,255,255,1);
-}
-#n_Btn_bw {
-  position: absolute;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 0px;
-  overflow: visible;
-  --web-animation: fadein 0.3s ease-out;
-  --web-action-type: page;
-  --web-action-target: Gallary_page.html;
-  cursor: pointer;
-}
-#n_1090_bx {
-  fill: rgba(38,153,251,1);
-}
-.n_1090_bx {
-  position: absolute;
-  overflow: visible;
-  width: 148px;
-  height: 48px;
-  left: 0px;
-  top: 0px;
 }
 #HOME {
   left: 47px;
@@ -914,61 +708,19 @@ a { color: #00B7FF;}
   top: 123px;
   overflow: visible;
 }
-#Icon_awesome-photo-video {
-  fill: rgba(255,255,255,1);
+.nav_icon {
+  font-size: 1.25rem;
 }
-.Icon_awesome-photo-video {
-  overflow: visible;
-  position: absolute;
-  width: 29.25px;
-  height: 24.367px;
-  left: 0.902px;
-  top: 120.248px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Icon_material-payment {
-  fill: rgba(255,255,255,1);
-}
-.Icon_material-payment {
-  overflow: visible;
-  position: absolute;
-  width: 30px;
-  height: 24px;
-  left: 2.477px;
-  top: 302.648px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Icon_material-contact-mail {
-  fill: rgba(255,255,255,1);
-}
-.Icon_material-contact-mail {
-  overflow: visible;
-  position: absolute;
-  width: 27.271px;
-  height: 21.324px;
-  left: 1.189px;
-  top: 178.953px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Icon_awesome-file-upload {
-  fill: rgba(255,255,255,1);
-}
-.Icon_awesome-file-upload {
-  overflow: visible;
-  position: absolute;
-  width: 27px;
-  height: 36px;
-  left: 3.566px;
-  top: 232.615px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Icon_ionic-md-help-circle-outl {
-  position: absolute;
-  width: 29.25px;
-  height: 29.25px;
-  left: 0.008px;
-  top: 56.965px;
-  overflow: visible;
+.bx {
+  font-family: boxicons!important;
+  font-weight: 400;
+  font-style: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-rendering: auto;
+  display: inline-block;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
 }
 #n_29 {
   position: absolute;
@@ -1019,7 +771,6 @@ a { color: #00B7FF;}
 }
 .Icon_awesome-home {
   overflow: visible;
-  position: absolute;
   width: 29.488px;
   height: 22.93px;
   left: -0.002px;
