--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -10,7 +10,7 @@
   <!-- Core Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
   <link rel="stylesheet" href="/stylesheets/style.css" type="text/css">
 </head>
 <body>
