--- a/views/layout/layoutMenu.html
+++ b/views/layout/layoutMenu.html
@@ -1,44 +1,31 @@
 <nav id="Menu" class="sidenav">
-  <div id="Menu_ba">
-    <svg class="n_581">
-      <rect id="n_581" rx="0" ry="0" x="0" y="0" width="412" height="733"></rect>
-    </svg>
-  </div>
-  <div class="list-group menu-group-text">
-    <a href="#" class="list-group-item menu-text">
+  <ul class="list-group menu-group-text">
+    <li class="list-group-item menu-text">
       <i class="material-icons">home</i>
-      <span class="menu-text">HOME</span>
-    </a>
-    <a href="#" class="list-group-item menu-text">
+      <a href="/main" class="menu-text text-decoration-none">HOME</a>
+    </li>
+    <li href="#" class="list-group-item menu-text">
       <i class="material-icons">help_outline</i>
       <span class="menu-text">사용설명</span>
-    </a>
-    <a href="#" class="list-group-item menu-text">
+    </li>
+    <li href="#" class="list-group-item menu-text">
       <i class="material-icons">photo_library</i>
       <span class="menu-text">사진촬영</span>
-    </a>
-    <a href="#" class="list-group-item menu-text">
+    </li>
+    <li href="#" class="list-group-item menu-text">
       <i class="material-icons">contact_mail</i>
       <span class="menu-text">내정보</span>
-    </a>
-    <a href="#" class="list-group-item menu-text">
+    </li>
+    <li href="#" class="list-group-item menu-text">
       <i class="material-icons">upload_file</i>
       <span class="menu-text">사진보내기</span>
-    </a>
-    <a href="#" class="list-group-item menu-text">
+    </li>
+    <li href="#" class="list-group-item menu-text">
       <i class="material-icons">payment</i>
       <span class="menu-text">결재하기</span>
-    </a>
-  </div>
-  <div id="n__bz">
-    
-    
-
-  </div>
-  <div id="profile">
-    <svg class="n_582">
-      <rect id="n_582" rx="0" ry="0" x="0" y="0" width="412" height="88"></rect>
-    </svg>
+    </li>
+  </ul>
+  <div class="profile">
     <div id="Name">
       <div id="Text">
         <span>박장군</span>
@@ -71,7 +58,7 @@
 </nav>
 <script>
   function openNav() {
-    document.getElementById("Menu").style.width = "412px";
+    document.getElementById("Menu").style.width = "340px";
     document.getElementById("Menu_bo").onclick = closeNav
   }
 
