--- a/views/main.html
+++ b/views/main.html
@@ -1,7 +1,7 @@
 {% set pageVar = {title: 'TWINSHIPS - WELCOME'} %}
 {% extends './layout/base.html' %}
 {% block content %}
-<div id="container">
+<div class="container">
   <div id="WELCOME_TWINSHIPS">
     <span>WELCOME TWINSHIPS</span>
   </div>
