--- a/views/main.html
+++ b/views/main.html
@@ -1,21 +1,9 @@
 {% set pageVar = {title: 'TWINSHIPS - WELCOME'} %}
 {% extends './layout/base.html' %}
 {% block content %}
-<div class="container">
-  <div id="WELCOME_TWINSHIPS">
-    <span>WELCOME TWINSHIPS</span>
-  </div>
-  <div id="Navigation_Bar_bl" class="Navigation_Bar">
-    <svg class="n_68_bm">
-      <rect id="n_68_bm" rx="0" ry="0" x="0" y="0" width="332" height="20"></rect>
-    </svg>
-    <svg class="n_69_bn">
-      <rect id="n_69_bn" rx="0" ry="0" x="0" y="0" width="332" height="48"></rect>
-    </svg>
-    <div onclick="openNav()" id="Menu_bo">
-      <svg class="n_175_bp">
-        <rect id="n_175_bp" rx="0" ry="0" x="0" y="0" width="16" height="16"></rect>
-      </svg>
+<header class="navbar">
+  <nav class="container-xxl flex-wrap flex-md-nowrap">
+    <div onclick="openNav()" id="Menu_bo" class="navbar-toggler collapsed">
       <svg class="n_4_bq" viewBox="0 0 16 14">
         <path id="n_4_bq" d="M 0 14 L 0 11.99935722351074 L 8 11.99935722351074 L 8 14 L 0 14 Z M 0 7.999871253967285 L 0 6.000128269195557 L 16 6.000128269195557 L 16 7.999871253967285 L 0 7.999871253967285 Z M 0 1.999742865562439 L 0 0 L 16 0 L 16 1.999742865562439 L 0 1.999742865562439 Z">
         </path>
@@ -28,20 +16,31 @@
       </svg>
     </div>
     <img id="logo_1-1_bt" src="images/logo_1-1_bt.png" srcset="images/logo_1-1_bt.png 1x, images/logo_1-1_bt@2x.png 2x">
+  </nav>
+</header>
+<main>
+  <div class="container">
+    <div id="WELCOME_TWINSHIPS">
+      <span>WELCOME TWINSHIPS</span>
+    </div>
+
+    <div id="n____________NEXT____">
+      <span>안녕하세요 박장군 고객님, 도면제작 서비스에 가입하신것을 환영합니다.<br/>
+            사용법을 안내해드리겠습니다. <br/>
+            아래 NEXT버튼을 눌러주세요.  
+      </span>
+    </div>
+    
+    <div id="n_584">
+      <div id="NEXT"><span>NEXT</span></div>
+      <div id="SKIP"><span>BACK</span></div>
+    </div>
+    <img id="guide_img1" src="images/welcome_img.png" srcset="images/welcome_img.png 1x, images/welcome_img@2x.png 2x">
+    {% include './layout/layoutMenu.html' %}
   </div>
-  <div id="n____________NEXT____">
-    <span>안녕하세요 박장군 고객님, 도면제작 서비스에 가입하신것을 환영합니다.<br/>
-          사용법을 안내해드리겠습니다. <br/>
-          아래 NEXT버튼을 눌러주세요.  
-    </span>
-  </div>
-  <div id="n_584">
-    <div id="NEXT"><span>NEXT</span></div>
-    <div id="SKIP"><span>BACK</span></div>
-  </div>
-  <img id="guide_img1" src="images/welcome_img.png" srcset="images/welcome_img.png 1x, images/welcome_img@2x.png 2x">
-  {% include './layout/layoutMenu.html' %}
-</div>
+</main>
+<footer></footer>
+
 {% endblock %}
 {% block  script %}
 <script>
