--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="/stylesheets/style.css" type="text/css">
 </head>
 <body>
+  <header class="navbar navbar-expand-md bd-navbar">
+  {% include './layoutMenu.html' %}
+  </header>
   {% block content %}
   {% endblock %}
   {% block script %}
