--- a/views/layout/layoutMenu.html
+++ b/views/layout/layoutMenu.html
@@ -19,11 +19,11 @@
       <i class="material-icons">help_outline</i>
       <span class="menu-text">사용설명</span>
     </a>
-    <a href="/photo" class="list-group-item menu-text">
+    <a href="/camera" class="list-group-item menu-text">
       <i class="material-icons">photo_library</i>
       <span class="menu-text">사진촬영</span>
     </a>
-    <a href="myinfo" class="list-group-item menu-text">
+    <a href="/myinfo" class="list-group-item menu-text">
       <i class="material-icons">contact_mail</i>
       <span class="menu-text">내정보</span>
     </a>
@@ -31,7 +31,7 @@
       <i class="material-icons">upload_file</i>
       <span class="menu-text">사진보내기</span>
     </a>
-    <a href="#" class="list-group-item menu-text">
+    <a href="/payment" class="list-group-item menu-text">
       <i class="material-icons">payment</i>
       <span class="menu-text">결재하기</span>
     </a>
