--- a/views/camera.html
+++ b/views/camera.html
@@ -14,11 +14,16 @@
           </svg>
           <i class="material-icons position-absolute top-50 start-50 translate-middle ico_camera">photo_camera</i>
         </div>
+        <div class="preview-box"></div> 
       </div>
       <div class="d-flex flex-column flex-sm-row">
         <div class="photo_button">
           <input type="file" id="input-file" name="input-file" accept="image/*" onchange={handleChange()} hidden/>
           <label class="btn-upload" for="input-file" role="button">촬영하기</label>
+        </div>
+        <div class="upload_button">
+          <input type="file" id="input-file" name="input-file" accept="image/*" onchange={handleChange()} hidden/>
+          <label class="btn-upload" for="input-file" role="button">전송하기</label>
         </div>
       </div>
     </div>
@@ -27,5 +32,33 @@
 <footer></footer>
 {% endblock %}
 {% block  script %}
+<script>
+  const handleChange = () => {
+  const fileUploader = document.querySelector('#input-file');
+  const getFile = fileUploader.files
+  if (getFile.length !== 0) {
+    const uploadedFile = getFile[0];
+    readFile(uploadedFile);
+  }
+}
 
+const readFile = (uploadedFile) => {
+  if (uploadedFile) {
+    const reader = new FileReader();
+    reader.onload = () => {
+      const parent = document.querySelector('.preview-box');
+      const playIcon = document.querySelector('.play');
+      const uploadBtn = document.querySelector('.upload_button');
+      const photoBtn = document.querySelector('.photo_button');
+      playIcon.style.display = 'none';
+      photoBtn.style.display = 'none';
+      uploadBtn.style.display = 'block';
+      parent.innerHTML = `<img class="preview-content" src=${reader.result} />`;
+    };
+    
+    reader.readAsDataURL(uploadedFile);
+  }
+};
+
+</script>
 {% endblock %}
